# pq-mesh-optimisation-tool

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  check.py  conftest.py  pyproject.toml  requirements.txt  requirements_without_CUDA.txt
.github/: codecov.yml  mlc_config.json
.github/workflows/: ci.yml
data/: DATA_GUIDE.md
data/input/: INPUT_MESHES.md
docs/: LOGBOOK.md  README.md  architecture.md  future_works.md  methodology.md
docs/dissertation/: Chapter4_FINAL_v2.md  Chapter4_FINAL_v3.md  README.md  acknowledgement.md  appendix_A_self-appraisal.md  appendix_B_external_material.md  appendix_C_extended_background_v6_FINAL.md  appendix_D_gradient_derivations_v5_FINAL.md  appendix_D_gradient_derivations_v6_FINAL.md  appendix_E_software_architecture_ref.md  appendix_F_benchmark_dataset_v1.md  appendix_G_reproduce_and_exp_config.md  appendix_H_extend_weight_sensitivity.md  appendix_I_future_work_development.md  appendix_e_corrected.md  appendix_e_corrected_v2.md  (+12 more)
scripts/: SCRIPTS_OVERVIEW.md
src/: OVERVIEW.md  __init__.py  backends.py
tests/: TESTING_GUIDE.md  __init__.py  test_backends.py  test_coverage_extended.py  test_coverage_gaps.py  test_energy_terms.py  test_error_handling.py  test_geometry.py  test_gradients.py  test_gradients_extended.py  test_mesh.py  test_numerical_equivalence.py  test_obj_handler.py  test_obj_handler_extended.py  test_optimiser.py  test_panel_exporter.py  test_preprocessor.py  test_quad_loading.py  test_quad_topology_preservation.py  test_robustness.py  test_scalability.py  test_vertex_face_ids.py
(+107 files in other folders)
